syntax = "proto3";

package auth.v1;

message Token {
    string id = 1;
    string access_token = 2;
    string refresh_token = 3;
    string user_id = 4;
}

service AuthService {
    rpc Login (AuthServiceLoginRequest) returns (AuthServiceLoginResponse);
    rpc Register (AuthServiceRegisterRequest) returns (AuthServiceRegisterResponse);
    rpc Logout (AuthServiceLogoutRequest) returns (AuthServiceLogoutResponse);
    rpc IsAuthenticated (IsAuthenticatedRequest) returns (IsAuthenticatedResponse);
}

message AuthServiceLoginRequest {
    string email = 1;
    string password = 2;
}

message AuthServiceLoginResponse {
    optional string access_token = 1;
    optional string refresh_token = 2;
    optional bool success = 3;
    optional string message = 4;
}

message AuthServiceRegisterRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message AuthServiceRegisterResponse {
    bool success = 1;
    optional string message = 2;
}

message AuthServiceLogoutRequest {
    string token = 1;
}

message AuthServiceLogoutResponse {
    bool success = 1;
    optional string message = 2;
}

message IsAuthenticatedRequest {
    string access_token = 1;
}

message IsAuthenticatedResponse {
    optional string user_id = 1;
    optional bool success = 2;
    optional string message = 3;
}
